fixed project tempalte tiles gap and buttons size.

--- a/src/app/components/project-template/project-template.component.scss
+++ b/src/app/components/project-template/project-template.component.scss
@@ -6,56 +6,72 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: stretch;
-    gap: 10px;
+    gap: 20px;
     width: 100%;
     height: 100%;
     background-color: #a1a1aa1a;
     border-radius: 12px;
-    padding: 10px;
+    padding: 20px;
     border: 2px dashed $gray;
     transition: $default-duration ease-in-out;
-    background: radial-gradient(circle farthest-corner at bottom center, rgb(158 118 201 / 26%) 0%, rgba(0, 0, 0, 0) 100%);
+    background: radial-gradient(
+        circle farthest-corner at bottom center,
+        rgb(158 118 201 / 26%) 0%,
+        rgba(0, 0, 0, 0) 100%
+    );
     background-size: 100%;
     background-position: center center;
     &:hover {
         filter: brightness(200%);
     }
     .links {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 10px;
         a {
+            &:hover {
+                color: $clear-blue;
+                svg {
+                    color: $clear-blue;
+                    transform: scale(1.2);
+                }
+            }
             border-radius: 12px;
             display: flex;
             justify-content: flex-end;
             align-items: center;
             color: $white;
-            width: 100%;
-            height: 3rem;
             text-decoration: underline;
-            font-size: 2rem;
+            font-size: 1.7rem;
+            // height: 100%;
+            transition: $default-duration ease-in-out;
             svg {
+                transition: $default-duration ease-in-out;
                 fill: $white;
-                height: 2rem;
+                height: 1.9rem;
                 width: 2rem;
                 font-size: 2rem;
             }
         }
     }
     header {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
         h3 {
             width: 100%;
             text-align: start;
+            color: $white;
+        }
+        h4 {
             color: $white;
         }
         width: 100%;
         p {
             color: $white;
             font-weight: 400;
-        }
-        .responsabilities-text {
-            margin-top: 10px;
-            span {
-                color: $white;
-                font-weight: 600;
-            }
         }
     }
 }
