--- a/src/app/components/technologies/technologies.component.scss
+++ b/src/app/components/technologies/technologies.component.scss
@@ -1,7 +1,7 @@
 ul{
     display: flex;
     width: 100%;
-    gap: 5px;
+    gap: 20px;
     li{
         .icon{
             height: 2rem;
