--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,6 +72,9 @@ h2 {
 h3{
     font-size: 1.7rem;
 }
+h4{
+    font-size: 1.6rem;
+}
 p,
 span {
     font-size: clamp(1rem, 1.4rem, 1.4rem);
